--- a/index.html
+++ b/index.html
@@ -1,63 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Document Archive Search</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="container py-5">
-    <h1 class="text-center text-primary mb-4">📚 Document Archive Search</h1>
+<body class="bg-light">
+  <div class="container py-4">
+    <h1 class="mb-4 text-primary">Document Archive Search</h1>
 
-    <div class="card shadow-sm mb-4">
-      <div class="card-body bg-light">
-        <form id="searchForm" class="row g-3 align-items-center">
-          <div class="col-md-4">
-            <label for="fieldSelect" class="form-label">Field to Search</label>
-            <select class="form-select" id="fieldSelect" required>
-              <option value="" selected disabled>Select a field</option>
-            </select>
-          </div>
-          <div class="col-md-6">
-            <label for="searchInput" class="form-label">Value to Search</label>
-            <input type="text" class="form-control" id="searchInput" placeholder="Enter search value" required>
-          </div>
-          <div class="col-md-2 mt-4 pt-2">
-            <button type="submit" class="btn btn-primary w-100">🔍 Search</button>
-          </div>
-          <div class="col-md-2 mt-4 pt-2">
-            <button type="button" class="btn btn-secondary w-100" id="refineBtn">🔎 Refine</button>
-          </div>
-          <div class="col-md-2 mt-4 pt-2">
-            <button type="button" class="btn btn-danger w-100" id="resetBtn">🔄 Reset</button>
-          </div>
-        </form>
-        
-        <!-- Refine search box will be dynamically inserted here -->
-        <div id="refineSearchBox" class="mt-4" style="display: none;">
-          <form id="refineForm" class="row g-3 align-items-center">
-            <div class="col-md-4">
-              <label for="refineFieldSelect" class="form-label">Refine Search Field</label>
-              <select class="form-select" id="refineFieldSelect" required>
-                <option value="" selected disabled>Select a field</option>
-              </select>
-            </div>
-            <div class="col-md-6">
-              <label for="refineSearchInput" class="form-label">Refine Search Value</label>
-              <input type="text" class="form-control" id="refineSearchInput" placeholder="Enter refine value" required>
-            </div>
-            <div class="col-md-2 mt-4 pt-2">
-              <button type="button" class="btn btn-primary w-100" id="refineSearchBtn">🔍 Apply Refine</button>
-            </div>
-          </form>
-        </div>
+    <form id="multiSearchForm" class="row g-3 mb-4">
+      <div class="col-md-3">
+        <label class="form-label">Anno</label>
+        <input type="text" class="form-control" name="Anno" />
       </div>
-    </div>
+      <div class="col-md-3">
+        <label class="form-label">Vol.</label>
+        <input type="text" class="form-control" name="Vol." />
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">Carta</label>
+        <input type="text" class="form-control" name="Carta" />
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">Nome</label>
+        <input type="text" class="form-control" name="Nome" />
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">Categoria</label>
+        <input type="text" class="form-control" name="Categoria" />
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">Titolo categoria</label>
+        <input type="text" class="form-control" name="Titolo categoria" />
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">Sottocategoria</label>
+        <input type="text" class="form-control" name="Sottocategoria" />
+      </div>
+      <div class="col-md-12">
+        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="button" class="btn btn-secondary" id="resetBtn">Reset</button>
+      </div>
+    </form>
 
     <div class="table-responsive">
-      <table class="table table-striped table-bordered table-hover">
+      <table class="table table-bordered table-striped">
         <thead class="table-primary" id="tableHeader"></thead>
         <tbody id="tableBody"></tbody>
       </table>
